2002-11-07  Gilles Courcoux  <Gilles.Courcoux@col.bsf.alcatel.fr>

	* fhandler_socket.cc (fhandler_socket::ioctl): Return correct flags
	for loopback interface when name is given on input instead of address.

2002-11-07  Jason Tishler  <jason@tishler.net>

	* cygwin.din: Export fseeko() and ftello().
	* include/cygwin/version.h: Bump API minor version.

2002-11-06  Christopher Faylor  <cgf@redhat.com>

	* fhandler_console.cc (keytable[]): Revert previous change.  It would
	break too many things.

2002-11-06  Christopher Faylor  <cgf@redhat.com>

	* fhandler_console.cc (keytable[]): Redefine F1 - F5 to something a
	little more sensical.

2002-11-06  Sergey Okhapkin  <sos@prospect.com.ru>

	* syscalls.cc (getutid): Use UT_IDLEN where appropriate.

2002-11-06  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/version.h: Bump API minor number for below export.

2002-11-06  Sergey Okhapkin  <sos@prospect.com.ru>

	* cygwin.din (pututline): New exported function.
	* syscalls.cc (login): Use pututiline().
	(setutent): Open utmp as read/write.
	(endutent): Check if utmp file is open.
	(utmpname): call endutent() to close current utmp file.
	(getutid): Enable all cases, use strncmp() to compare ut_id fields.
	(pututline): New.
	* tty.cc (create_tty_master): Set ut_pid to current pid.

2002-11-05  Christopher Faylor  <cgf@redhat.com>

	* fhandler_serial.cc (fhandler_serial::ioctl): Don't try to figure out
	if OS has the capability to retrieve RTS/CTS.  Just set default values
	if DeviceIoControl fails.  (suggested by Sergey Okhapkin)

2002-11-05  Sergey Okhapkin  <sos@prospect.com.ru>

	* fhandler_serial.cc (fhandler_serial::raw_read): Use correct type for
	minchars.
	(fhandler_serial::ioctl): Set errno if the ClearCommError fails.
	(fhandler_serial::tcsetattr): Use correct value for vmin_.
	(fhandler_serial::tcgetattr): Ditto.

2002-11-05  Thomas Pfaff  <tpfaff@gmx.net>

	* fhandler_socket.cc (fhandler_socket::recvmsg): Call if from == NULL