@@ -1,0 +1,22 @@
+/* cygwin/fs.h
+
+   Copyright 2002 Red Hat Inc.
+   Written by Chris January <chris@atomice.net>
+
+This file is part of Cygwin.
+
+This software is a copyrighted work licensed under the terms of the
+Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
+details. */
+
+#ifndef _CYGWIN_FS_H_
+#define _CYGWIN_FS_H_
+
+#include <cygwin/types.h>
+
+#define BLKRRPART  0x0000125f
+#define BLKGETSIZE 0x00001260
+#define BLKSSZGET  0x00001268
+#define BLKGETSIZE64 0x00041268
+
+#endif
